# c4ai-scrpr

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  orjson.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/admin/: cli.py  status.py
app/fetch/: etag_cache.py  fetcher.py  robots.py  session.py  snapshot.py
app/normalize/: fields.py  geo.py  taxonomy.py
app/observability/: log.py  metrics.py  tracing.py
app/orchestrator/: checkpoint.py  jobs.py  queue.py  schedule_loop.py  scheduler.py  source_loader.py
app/parse/: extractor.py  jsonld.py  pagination.py  rules.py
app/quality/: dedup.py  keys.py  merge.py  quarantine.py  validate.py
app/storage/: layout.py  models.py  partition.py  writers.py
config/: logging.yaml  settings.toml
config/schemas/: event.schema.json  festival.schema.json  sports.schema.json
data/bronze/: conditional.json
data/gold/: events.db
data/manifests/: run-20250925T221944.json  run-20250925T224210.json
data/metrics/: run_20250925T224210.json
data/silver/: events-20250925T221944.jsonl  events-20250925T224210.jsonl
docs/: RULES_GUIDE.md  RUNBOOK.md
scripts/: run_once.sh  seed_sources.py
source_registry/: sources.csv
source_registry/rules/: arts_festival_demo.yaml  city_events_demo.yaml  demo_events.yaml  demo_sports.yaml  sports_club_demo.yaml
tests/: test_admin_cli.py  test_checkpoint.py  test_dedup.py  test_dry_run.py  test_end_to_end.py  test_etag_cache.py  test_fetch.py  test_jsonld_hardened.py  test_parse_jsonld.py  test_parse_rules.py  test_partition_exports.py  test_schedule_loop.py  test_source_loader.py  test_validate.py
(+11 files in other folders)
